--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "evaluation-productivite-diwjs17",
   "version": "1.0.0",
-  "description": "",
+  "description": "``` npm install ```",
   "type": "module",
   "scripts": {
     "start": "node index.js",
@@ -16,7 +16,21 @@
     "express-session": "^1.17.2"
   },
   "devDependencies": {
-    "eslint": "^8.7.0",
-    "jest": "^27.4.7"
-  }
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.2.0",
+    "jest": "^27.4.7",
+    "jsdoc": "^3.6.10"
+  },
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/VirtuoWorks/eval-productivite.git"
+  },
+  "bugs": {
+    "url": "https://github.com/VirtuoWorks/eval-productivite/issues"
+  },
+  "homepage": "https://github.com/VirtuoWorks/eval-productivite#readme"
 }
