--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.2.0",
     "jest": "^27.4.7",
-    "jsdoc": "^3.6.10"
+    "jsdoc": "^3.6.10",
+    "prettier": "2.5.1"
   },
   "main": "index.js",
   "repository": {
