--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "scripts": {
     "start": "node index.js",
-    "test": "jest"
+    "test": "jest",
+    "type": "module"
+    
   },
   "keywords": [],
   "author": "",
@@ -25,7 +27,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.2.0",
     "jest": "^27.4.7",
-    "jsdoc": "^3.6.10",
+    "jsdoc": "^3.6.7",
     "prettier": "2.5.1"
   },
   "main": "index.js",
